[tool.poetry]
name = "flayyer"
version = "0.1.0"
description = "FLAYYER.com helper classes and methods"
authors = ["Patricio López Juri <patricio@flayyer.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://flayyer.com/"
repository = "https://github.com/flayyer/flayyer-python"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "*", allow-prereleases = true}
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
